CREATE TABLE IF NOT EXISTS "django_migrations" ("id" integer NOT NULL PRIMARY KEY , "app" varchar(255) NOT NULL, "name" varchar(255) NOT NULL, "applied" datetime NOT NULL);
CREATE TABLE IF NOT EXISTS "auth_group_permissions" ("id" integer NOT NULL PRIMARY KEY , "group_id" integer NOT NULL REFERENCES "auth_group" ("id") DEFERRABLE INITIALLY DEFERRED, "permission_id" integer NOT NULL REFERENCES "auth_permission" ("id") DEFERRABLE INITIALLY DEFERRED);
CREATE TABLE IF NOT EXISTS "auth_user_groups" ("id" integer NOT NULL PRIMARY KEY , "user_id" integer NOT NULL REFERENCES "auth_user" ("id") DEFERRABLE INITIALLY DEFERRED, "group_id" integer NOT NULL REFERENCES "auth_group" ("id") DEFERRABLE INITIALLY DEFERRED);
CREATE TABLE IF NOT EXISTS "auth_user_user_permissions" ("id" integer NOT NULL PRIMARY KEY , "user_id" integer NOT NULL REFERENCES "auth_user" ("id") DEFERRABLE INITIALLY DEFERRED, "permission_id" integer NOT NULL REFERENCES "auth_permission" ("id") DEFERRABLE INITIALLY DEFERRED);
CREATE UNIQUE INDEX "auth_group_permissions_group_id_permission_id_0cd325b0_uniq" ON "auth_group_permissions" ("group_id", "permission_id");
CREATE INDEX "auth_group_permissions_group_id_b120cbf9" ON "auth_group_permissions" ("group_id");
CREATE INDEX "auth_group_permissions_permission_id_84c5c92e" ON "auth_group_permissions" ("permission_id");
CREATE UNIQUE INDEX "auth_user_groups_user_id_group_id_94350c0c_uniq" ON "auth_user_groups" ("user_id", "group_id");
CREATE INDEX "auth_user_groups_user_id_6a12ed8b" ON "auth_user_groups" ("user_id");
CREATE INDEX "auth_user_groups_group_id_97559544" ON "auth_user_groups" ("group_id");
CREATE UNIQUE INDEX "auth_user_user_permissions_user_id_permission_id_14a6b632_uniq" ON "auth_user_user_permissions" ("user_id", "permission_id");
CREATE INDEX "auth_user_user_permissions_user_id_a95ead1b" ON "auth_user_user_permissions" ("user_id");
CREATE INDEX "auth_user_user_permissions_permission_id_1fbb5f2c" ON "auth_user_user_permissions" ("permission_id");
CREATE TABLE IF NOT EXISTS "django_admin_log" ("id" integer NOT NULL PRIMARY KEY , "object_id" text NULL, "object_repr" varchar(200) NOT NULL, "action_flag" smallint  NOT NULL CHECK ("action_flag" >= 0), "change_message" text NOT NULL, "content_type_id" integer NULL REFERENCES "django_content_type" ("id") DEFERRABLE INITIALLY DEFERRED, "user_id" integer NOT NULL REFERENCES "auth_user" ("id") DEFERRABLE INITIALLY DEFERRED, "action_time" datetime NOT NULL);
CREATE INDEX "django_admin_log_content_type_id_c4bce8eb" ON "django_admin_log" ("content_type_id");
CREATE INDEX "django_admin_log_user_id_c564eba6" ON "django_admin_log" ("user_id");
CREATE TABLE IF NOT EXISTS "django_content_type" ("id" integer NOT NULL PRIMARY KEY , "app_label" varchar(100) NOT NULL, "model" varchar(100) NOT NULL);
CREATE UNIQUE INDEX "django_content_type_app_label_model_76bd3d3b_uniq" ON "django_content_type" ("app_label", "model");
CREATE TABLE IF NOT EXISTS "auth_permission" ("id" integer NOT NULL PRIMARY KEY , "content_type_id" integer NOT NULL REFERENCES "django_content_type" ("id") DEFERRABLE INITIALLY DEFERRED, "codename" varchar(100) NOT NULL, "name" varchar(255) NOT NULL);
CREATE UNIQUE INDEX "auth_permission_content_type_id_codename_01ab375a_uniq" ON "auth_permission" ("content_type_id", "codename");
CREATE INDEX "auth_permission_content_type_id_2f476e4b" ON "auth_permission" ("content_type_id");
CREATE TABLE IF NOT EXISTS "auth_group" ("id" integer NOT NULL PRIMARY KEY , "name" varchar(150) NOT NULL UNIQUE);
CREATE TABLE IF NOT EXISTS "auth_user" ("id" integer NOT NULL PRIMARY KEY , "password" varchar(128) NOT NULL, "last_login" datetime NULL, "is_superuser" bool NOT NULL, "username" varchar(150) NOT NULL UNIQUE, "last_name" varchar(150) NOT NULL, "email" varchar(254) NOT NULL, "is_staff" bool NOT NULL, "is_active" bool NOT NULL, "date_joined" datetime NOT NULL, "first_name" varchar(150) NOT NULL);
CREATE TABLE IF NOT EXISTS "django_session" ("session_key" varchar(40) NOT NULL PRIMARY KEY, "session_data" text NOT NULL, "expire_date" datetime NOT NULL);
CREATE INDEX "django_session_expire_date_a5c62663" ON "django_session" ("expire_date");
CREATE TABLE IF NOT EXISTS "users_confirmedorders" ("id" integer NOT NULL PRIMARY KEY );
CREATE TABLE IF NOT EXISTS "users_articles" ("id" integer NOT NULL PRIMARY KEY , "title" varchar(30) NOT NULL, "summary" varchar(45) NOT NULL, "content" text NOT NULL, "publish_date" date NOT NULL);
CREATE TABLE IF NOT EXISTS "users_contactus" ("id" integer NOT NULL PRIMARY KEY , "name" varchar(30) NOT NULL, "email" varchar(30) NOT NULL, "date_sent" date NOT NULL, "user_id" integer NOT NULL REFERENCES "auth_user" ("id") DEFERRABLE INITIALLY DEFERRED, "message" text NOT NULL);
CREATE INDEX "users_contactus_user_id_603dec9e" ON "users_contactus" ("user_id");
CREATE TABLE IF NOT EXISTS "users_menperfume" ("id" integer NOT NULL PRIMARY KEY , "name" varchar(30) NOT NULL, "pic_name" text NOT NULL, "picurl" varchar(100) NOT NULL, "description" varchar(30) NOT NULL, "price" integer NOT NULL, "scent" varchar(20) NOT NULL, "is_for_men" bool NOT NULL, "date" date NOT NULL);
CREATE TABLE IF NOT EXISTS "users_womenperfume" ("id" integer NOT NULL PRIMARY KEY , "name" varchar(30) NOT NULL, "pic_name" text NOT NULL, "picurl" varchar(100) NOT NULL, "description" varchar(30) NOT NULL, "price" integer NOT NULL, "scent" varchar(20) NOT NULL, "is_for_women" bool NOT NULL, "date" date NOT NULL);
CREATE TABLE IF NOT EXISTS "users_customer" ("id" integer NOT NULL PRIMARY KEY , "email" varchar(254) NOT NULL UNIQUE, "phone_number" varchar(30) NOT NULL, "date_created" date NOT NULL, "is_distributor" bool NOT NULL, "coupon_code" varchar(6) NOT NULL, "applied_coupon" varchar(6) NOT NULL, "user_id" integer NOT NULL UNIQUE REFERENCES "auth_user" ("id") DEFERRABLE INITIALLY DEFERRED, "first_name" varchar(30) NOT NULL, "last_name" varchar(30) NOT NULL, "password" varchar(20) NOT NULL);
CREATE TABLE IF NOT EXISTS "users_order" ("id" integer NOT NULL PRIMARY KEY , "billing_name" varchar(30) NOT NULL, "billing_city" varchar(30) NOT NULL, "phone_number" varchar(30) NOT NULL, "status" varchar(10) NOT NULL, "total" decimal NOT NULL, "date_created" datetime NOT NULL, "receipt" varchar(100) NULL, "confirmed_order_code" varchar(7) NULL, "customer_id" bigint NOT NULL REFERENCES "users_customer" ("id") DEFERRABLE INITIALLY DEFERRED, "quantity" integer NOT NULL, "billing_address" varchar(60) NOT NULL);
CREATE INDEX "users_order_customer_id_c55491d3" ON "users_order" ("customer_id");
CREATE TABLE IF NOT EXISTS "users_wishlistitem" ("id" integer NOT NULL PRIMARY KEY , "quantity" integer  NOT NULL CHECK ("quantity" >= 0), "content_type_id" integer NOT NULL REFERENCES "django_content_type" ("id") DEFERRABLE INITIALLY DEFERRED, "object_id" integer  NOT NULL CHECK ("object_id" >= 0), "user_id" bigint NOT NULL REFERENCES "users_customer" ("id") DEFERRABLE INITIALLY DEFERRED);
CREATE INDEX "users_wishlistitem_content_type_id_eeac3595" ON "users_wishlistitem" ("content_type_id");
CREATE INDEX "users_wishlistitem_user_id_9bddb68a" ON "users_wishlistitem" ("user_id");
CREATE TABLE IF NOT EXISTS "users_review" ("id" integer NOT NULL PRIMARY KEY , "object_id" integer  NOT NULL CHECK ("object_id" >= 0), "rating" integer  NOT NULL CHECK ("rating" >= 0), "comment" text NOT NULL, "created_at" datetime NOT NULL, "content_type_id" integer NOT NULL REFERENCES "django_content_type" ("id") DEFERRABLE INITIALLY DEFERRED, "user_id" bigint NOT NULL REFERENCES "users_customer" ("id") DEFERRABLE INITIALLY DEFERRED);
CREATE INDEX "users_review_content_type_id_4db9b743" ON "users_review" ("content_type_id");
CREATE INDEX "users_review_user_id_6b925e9f" ON "users_review" ("user_id");
