Table "django_migrations" {
  "id" integer [pk, not null]
  "app" varchar(255) [not null]
  "name" varchar(255) [not null]
  "applied" datetime [not null]
}

Table "auth_group_permissions" {
  "id" integer [pk, not null]
  "group_id" integer [not null]
  "permission_id" integer [not null]

  Indexes {
    (group_id, permission_id) [unique, name: "auth_group_permissions_group_id_permission_id_0cd325b0_uniq"]
    group_id [name: "auth_group_permissions_group_id_b120cbf9"]
    permission_id [name: "auth_group_permissions_permission_id_84c5c92e"]
  }
}

Table "auth_user_groups" {
  "id" integer [pk, not null]
  "user_id" integer [not null]
  "group_id" integer [not null]

  Indexes {
    (user_id, group_id) [unique, name: "auth_user_groups_user_id_group_id_94350c0c_uniq"]
    user_id [name: "auth_user_groups_user_id_6a12ed8b"]
    group_id [name: "auth_user_groups_group_id_97559544"]
  }
}

Table "auth_user_user_permissions" {
  "id" integer [pk, not null]
  "user_id" integer [not null]
  "permission_id" integer [not null]

  Indexes {
    (user_id, permission_id) [unique, name: "auth_user_user_permissions_user_id_permission_id_14a6b632_uniq"]
    user_id [name: "auth_user_user_permissions_user_id_a95ead1b"]
    permission_id [name: "auth_user_user_permissions_permission_id_1fbb5f2c"]
  }
}

Table "django_admin_log" {
  "id" integer [pk, not null]
  "object_id" text
  "object_repr" varchar(200) [not null]
  "action_flag" smallint [not null, check: `"action_flag" >= 0`]
  "change_message" text [not null]
  "content_type_id" integer
  "user_id" integer [not null]
  "action_time" datetime [not null]

  Indexes {
    content_type_id [name: "django_admin_log_content_type_id_c4bce8eb"]
    user_id [name: "django_admin_log_user_id_c564eba6"]
  }
}

Table "django_content_type" {
  "id" integer [pk, not null]
  "app_label" varchar(100) [not null]
  "model" varchar(100) [not null]

  Indexes {
    (app_label, model) [unique, name: "django_content_type_app_label_model_76bd3d3b_uniq"]
  }
}

Table "auth_permission" {
  "id" integer [pk, not null]
  "content_type_id" integer [not null]
  "codename" varchar(100) [not null]
  "name" varchar(255) [not null]

  Indexes {
    (content_type_id, codename) [unique, name: "auth_permission_content_type_id_codename_01ab375a_uniq"]
    content_type_id [name: "auth_permission_content_type_id_2f476e4b"]
  }
}

Table "auth_group" {
  "id" integer [pk, not null]
  "name" varchar(150) [unique, not null]
}

Table "auth_user" {
  "id" integer [pk, not null]
  "password" varchar(128) [not null]
  "last_login" datetime
  "is_superuser" bool [not null]
  "username" varchar(150) [unique, not null]
  "last_name" varchar(150) [not null]
  "email" varchar(254) [not null]
  "is_staff" bool [not null]
  "is_active" bool [not null]
  "date_joined" datetime [not null]
  "first_name" varchar(150) [not null]
}

Table "django_session" {
  "session_key" varchar(40) [pk, not null]
  "session_data" text [not null]
  "expire_date" datetime [not null]

  Indexes {
    expire_date [name: "django_session_expire_date_a5c62663"]
  }
}

Table "users_confirmedorders" {
  "id" integer [pk, not null]
}

Table "users_articles" {
  "id" integer [pk, not null]
  "title" varchar(30) [not null]
  "summary" varchar(45) [not null]
  "content" text [not null]
  "publish_date" date [not null]
}

Table "users_contactus" {
  "id" integer [pk, not null]
  "name" varchar(30) [not null]
  "email" varchar(30) [not null]
  "date_sent" date [not null]
  "user_id" integer [not null]
  "message" text [not null]

  Indexes {
    user_id [name: "users_contactus_user_id_603dec9e"]
  }
}

Table "users_menperfume" {
  "id" integer [pk, not null]
  "name" varchar(30) [not null]
  "pic_name" text [not null]
  "picurl" varchar(100) [not null]
  "description" varchar(30) [not null]
  "price" integer [not null]
  "scent" varchar(20) [not null]
  "is_for_men" bool [not null]
  "date" date [not null]
}

Table "users_womenperfume" {
  "id" integer [pk, not null]
  "name" varchar(30) [not null]
  "pic_name" text [not null]
  "picurl" varchar(100) [not null]
  "description" varchar(30) [not null]
  "price" integer [not null]
  "scent" varchar(20) [not null]
  "is_for_women" bool [not null]
  "date" date [not null]
}

Table "users_customer" {
  "id" integer [pk, not null]
  "email" varchar(254) [unique, not null]
  "phone_number" varchar(30) [not null]
  "date_created" date [not null]
  "is_distributor" bool [not null]
  "coupon_code" varchar(6) [not null]
  "applied_coupon" varchar(6) [not null]
  "user_id" integer [unique, not null]
  "first_name" varchar(30) [not null]
  "last_name" varchar(30) [not null]
  "password" varchar(20) [not null]
}

Table "users_order" {
  "id" integer [pk, not null]
  "billing_name" varchar(30) [not null]
  "billing_city" varchar(30) [not null]
  "phone_number" varchar(30) [not null]
  "status" varchar(10) [not null]
  "total" decimal [not null]
  "date_created" datetime [not null]
  "receipt" varchar(100)
  "confirmed_order_code" varchar(7)
  "customer_id" bigint [not null]
  "quantity" integer [not null]
  "billing_address" varchar(60) [not null]

  Indexes {
    customer_id [name: "users_order_customer_id_c55491d3"]
  }
}

Table "users_wishlistitem" {
  "id" integer [pk, not null]
  "quantity" integer [not null, check: `"quantity" >= 0`]
  "content_type_id" integer [not null]
  "object_id" integer [not null, check: `"object_id" >= 0`]
  "user_id" bigint [not null]

  Indexes {
    content_type_id [name: "users_wishlistitem_content_type_id_eeac3595"]
    user_id [name: "users_wishlistitem_user_id_9bddb68a"]
  }
}

Table "users_review" {
  "id" integer [pk, not null]
  "object_id" integer [not null, check: `"object_id" >= 0`]
  "rating" integer [not null, check: `"rating" >= 0`]
  "comment" text [not null]
  "created_at" datetime [not null]
  "content_type_id" integer [not null]
  "user_id" bigint [not null]

  Indexes {
    content_type_id [name: "users_review_content_type_id_4db9b743"]
    user_id [name: "users_review_user_id_6b925e9f"]
  }
}

Ref:"auth_group"."id" < "auth_group_permissions"."group_id"

Ref:"auth_permission"."id" < "auth_group_permissions"."permission_id"

Ref:"auth_user"."id" < "auth_user_groups"."user_id"

Ref:"auth_group"."id" < "auth_user_groups"."group_id"

Ref:"auth_user"."id" < "auth_user_user_permissions"."user_id"

Ref:"auth_permission"."id" < "auth_user_user_permissions"."permission_id"

Ref:"django_content_type"."id" < "django_admin_log"."content_type_id"

Ref:"auth_user"."id" < "django_admin_log"."user_id"

Ref:"django_content_type"."id" < "auth_permission"."content_type_id"

Ref:"auth_user"."id" < "users_contactus"."user_id"

Ref:"auth_user"."id" < "users_customer"."user_id"

Ref:"users_customer"."id" < "users_order"."customer_id"

Ref:"django_content_type"."id" < "users_wishlistitem"."content_type_id"

Ref:"users_customer"."id" < "users_wishlistitem"."user_id"

Ref:"django_content_type"."id" < "users_review"."content_type_id"

Ref:"users_customer"."id" < "users_review"."user_id"
